# project-NeuroGlobetrotters

./: ..gitignore.un~  .gitignore  .gitignore~  .gitmodules  README.md  adj_matrix.txt  causal_graph.html  graphpipeline.py  hello.py  pyproject.toml
notebooks/: bellaj1.ipynb  bj_varma.ipynb  data_yassine.ipynb  gcastle-CORL.ipynb  gcastle.ipynb  prior_knowledge_prep.ipynb  risk_evaluation.ipynb
report/: Makefile  bosch.bib  report.aux  report.bbl  report.bcf  report.blg  report.out  report.run.xml  report.tex
src/: FCI.py  LiNGAM.py  PC.py  data_prep.py  evaluation.py  test.py
