[project]
name = "neuralwave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dowhy>=0.11.1",
    "gcastle>=1.0.3",
    "idtxl",
    "jupyter>=1.1.1",
    "lab>=8.3",
    "py-causalflow>=4.0.4",
]

[tool.uv.sources]
idtxl = { path = "IDTxl" }
